# myportfolio

./: .gitignore  package-lock.json  package.json  pyproject.toml  requirements.txt
backend/: pyproject.toml  requirements.txt
backend/myportfolio/: urls.py
backend/users/: models.py
components/: Play.jsx  UploadFile.jsx
components/ui/: cover.jsx  file-upload.jsx  hero-parallax.jsx
frontend/: package-lock.json
frontend/.next/: trace
frontend/.next/cache/: .rscinfo
frontend/.next/cache/webpack/client-development/: index.pack.gz.old
frontend/.next/cache/webpack/server-development/: index.pack.gz.old
frontend/.next/server/: next-font-manifest.js  next-font-manifest.json  server-reference-manifest.json  webpack-runtime.js
frontend/.next/server/app/: page.js  page_client-reference-manifest.js
frontend/.next/server/app/favicon.ico/: route.js
frontend/.next/server/vendor-chunks/: @swc.js  @tabler.js  @tsparticles.js  clsx.js  motion.js  tailwind-merge.js
frontend/.next/static/chunks/: app-pages-internals.js  webpack.js
frontend/.next/static/chunks/app/: layout.js
frontend/.next/static/css/app/: layout.css
frontend/.next/types/app/: layout.ts  page.ts
frontend/app/: page.js
frontend/app/features/: page.jsx
frontend/components/: FeatureSection.jsx  Footer.jsx  Hero.jsx  Navbar1.jsx
frontend/components/ui/: resizable-navbar.jsx  sparkles.jsx
myportfolio/: settings.py
portfolios/: models.py  serializers.py
resumes/: models.py  serializers.py
users/: serializers.py
